# arya

./: .gitgnore  .gitignore  NOTICE  README.md  README.rst  pyproject.toml  setup.py
arya/: apicxmljson.py  arya.py  getconfigfromapic.py  version.py
pyra/: pyra.py
tests/: test_arya.py
